--- a/layouts/partials/article-list/tile.html
+++ b/layouts/partials/article-list/tile.html
@@ -1,6 +1,6 @@
 {{ $image := partialCached "helper/image" (dict "Context" .context "Type" .Type) .context.RelPermalink .Type }}
 {{- $baseURL := urls.Parse .Site.BaseURL -}}
-{{ $StaticallyImgixURL := print "//cdn.statically.io/img/" $baseURL.Host }}
+{{ $StaticallyImgixURL := print "//cdn.statically.io/img" $baseURL.Host }}
 {{ $StaticallyWebpImgixURL := print $StaticallyImgixURL "/f=auto" }}
 <article class="{{ if $image.exists }}has-image{{ end }}">
     <a href="{{ .context.RelPermalink }}">
@@ -30,7 +30,7 @@
                                 {{- $Permalink = printf "%s%s" $StaticallyWebpImgixURL $thumbnail.RelPermalink -}}
                             {{- end -}}
                         {{- else -}}
-                            {{- $Permalink = $thumbnail.RelPermalink -}}
+                            {{- $Permalink =  printf "%s%s" $StaticallyWebpImgixURL $thumbnail.RelPermalink -}}
                         {{- end -}}
                         {{- $Width = $thumbnail.Width -}}
                         {{- $Height = $thumbnail.Height -}}
