--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -21,10 +21,10 @@ details.info {
 </style>
 {{- $Permalink := "" -}}
 {{- if ne hugo.Environment "development" -}}
-    {{- if and (eq .Site.Params.CDN.Provider "statically") (.GitInfo) (.Site.Params.Repo) -}}
-        {{- $Permalink = printf "https://cdn.statically.io/gh/%s/%s/%s" $.Site.Params.Repo.Username $.Site.Params.Repo.Name $.GitInfo.AbbreviatedHash -}}
-    {{- else if and (eq .Site.Params.CDN.Provider "jsdelivr") (.GitInfo) (.Site.Params.Repo) -}}
-        {{- $Permalink = printf "https://cdn.jsdelivr.net/gh/%s/%s@%s" $.Site.Params.Repo.Username $.Site.Params.Repo.Name $.GitInfo.Hash -}}
+    {{- if and (eq .Site.Params.CDN.Provider "statically") (.Site.Params.Repo) -}}
+        {{- $Permalink = printf "https://cdn.statically.io/gh/%s/%s/%s" .Site.Params.Repo.Username .Site.Params.Repo.Name .Site.Params.Repo.AbbreviatedCommit -}}
+    {{- else if and (eq .Site.Params.CDN.Provider "jsdelivr") (.Site.Params.Repo) -}}
+        {{- $Permalink = printf "https://cdn.jsdelivr.net/gh/%s/%s@%s" .Site.Params.Repo.Username .Site.Params.Repo.Name .Site.Params.Repo.Commit -}}
     {{- else -}}
         {{- $Permalink = "" -}}
     {{- end -}}
