--- a/layouts/partials/article-list/compact.html
+++ b/layouts/partials/article-list/compact.html
@@ -1,6 +1,3 @@
-{{- $baseURL := urls.Parse .Site.BaseURL -}}
-{{ $StaticallyImgixURL := print "//cdn.statically.io/img/" $baseURL.Host }}
-{{ $StaticallyWebpImgixURL := print $StaticallyImgixURL "/f=auto" }}
 <article>
     <a href="{{ .RelPermalink }}">
         <div class="article-details">
@@ -26,26 +23,19 @@
                     {{- $Width := $image.resource.Width -}}
                     {{- $Height := $image.resource.Height -}}
 
-                    {{- if and ($.Site.Params.StaticallyCDN.Imgix) (ne hugo.Environment "development") -}}
-                        {{- $Permalink = printf "%s%s" $StaticallyImgixURL $image.resource.RelPermalink -}}
-                        {{- if eq .Site.Params.StaticallyCDN.Imgix.autowebp true -}}
-                            {{- $Permalink = printf "%s%s" $StaticallyWebpImgixURL $image.resource.RelPermalink -}}
-                        {{- end -}}
+                    {{- if and (.Site.Params.CDN.Images.URL) (ne hugo.Environment "development") -}}
+                        {{- $Permalink = printf "%s%s" .Site.Params.CDN.Images.URL $image.resource.RelPermalink -}}
                     {{- else -}}
                         {{- $Permalink = $image.resource.RelPermalink -}}
                     {{- end -}}
 
-                    {{- if (default true .Page.Site.Params.imageProcessing.cover.enabled) -}}
+                    {{- if (default true .Site.Params.imageProcessing.cover.enabled) -}}
                         {{- $thumbnail := $image.resource.Fill "120x120" -}}
                         {{- $Width = $thumbnail.Width -}}
                         {{- $Height = $thumbnail.Height -}}
-                        {{- if and (.Site.Params.StaticallyCDN.Imgix) (ne hugo.Environment "development") -}}
-                            {{- $Permalink = printf "%s%s" $StaticallyImgixURL $thumbnail.RelPermalink -}}
-                            {{- if eq .Site.Params.StaticallyCDN.Imgix.autowebp true -}}
-                                {{- $Permalink = printf "%s%s" $StaticallyWebpImgixURL $thumbnail.RelPermalink -}}
-                            {{- end -}}
-                        {{- else -}}
-                            {{- $Permalink = $thumbnail.RelPermalink -}}
+                        {{- $Permalink = $thumbnail.RelPermalink -}}
+                        {{- if and (.Site.Params.CDN.Images.URL) (ne hugo.Environment "development") -}}
+                            {{- $Permalink = printf "%s%s" .Site.Params.CDN.Images.URL $thumbnail.RelPermalink -}}
                         {{- end -}}
                     {{- end -}}
                     
