--- a/layouts/partials/article-list/tile.html
+++ b/layouts/partials/article-list/tile.html
@@ -1,6 +1,3 @@
-{{- $baseURL := urls.Parse .Site.BaseURL -}}
-{{ $StaticallyImgixURL := printf "//cdn.statically.io/img/%s" $baseURL.Host }}
-{{ $StaticallyWebpImgixURL := printf "%s/f=auto" $StaticallyImgixURL }}
 {{ $image := partialCached "helper/image" (dict "Context" .context "Type" .Type) .context.RelPermalink .Type }}
 <article class="{{ if $image.exists }}has-image{{ end }}">
     <a href="{{ .context.RelPermalink }}">
@@ -13,25 +10,18 @@
                     {{- $Width := $imageRaw.Width -}}
                     {{- $Height := $imageRaw.Height -}}
 
-                    {{ if and ($.Site.Params.StaticallyCDN.Imgix) (ne hugo.Environment "development") }}
-                        {{- $Permalink = printf "%s%s" $StaticallyImgixURL $imageRaw.RelPermalink -}}
-                        {{ if eq .Site.Params.StaticallyCDN.Imgix.autowebp true }}
-                            {{- $Permalink = printf "%s%s" $StaticallyWebpImgixURL $imageRaw.RelPermalink -}}
-                        {{ end }}
-                    {{ else }}
+                    {{- if and (.Site.Params.CDN.Images.URL) (ne hugo.Environment "development") -}}
+                        {{- $Permalink = printf "%s%s" .Site.Params.CDN.Images.URL $imageRaw.RelPermalink -}}
+                    {{- else -}}
                         {{- $Permalink = $imageRaw.RelPermalink -}}
-                    {{ end }}
+                    {{- end -}}
 
-                    {{- if (default true .Page.Site.Params.imageProcessing.cover.enabled) -}}
+                    {{- if (default true .Site.Params.imageProcessing.cover.enabled) -}}
                         {{- $thumbnail := $imageRaw.Fill .size -}}
-                        {{ if and (.Site.Params.StaticallyCDN.Imgix) (ne hugo.Environment "development") }}
-                            {{- $Permalink = printf "%s%s" $StaticallyImgixURL $thumbnail.RelPermalink -}}
-                            {{ if eq .Site.Params.StaticallyCDN.Imgix.autowebp true }}
-                                {{- $Permalink = printf "%s%s" $StaticallyWebpImgixURL $thumbnail.RelPermalink -}}
-                            {{ end }}
-                        {{ else }}
-                            {{- $Permalink = $thumbnail.RelPermalink -}}
-                        {{ end }}
+                        {{- $Permalink = $thumbnail.RelPermalink -}}
+                        {{- if and (.Site.Params.CDN.Images.URL) (ne hugo.Environment "development") -}}
+                            {{- $Permalink = printf "%s%s" .Site.Params.CDN.Images.URL $thumbnail.RelPermalink -}}
+                        {{- end -}}
                         {{- $Width = $thumbnail.Width -}}
                         {{- $Height = $thumbnail.Height -}}
                     {{- end -}}
