--- a/layouts/partials/article/components/photoswipe.html
+++ b/layouts/partials/article/components/photoswipe.html
@@ -1,6 +1,10 @@
 {{- $PhotoswipeURL := "" -}}
-{{- if eq .Site.Params.CDN.Provider "statically" -}}
+{{- if eq .Site.Params.CDN.Libraries.Provider "statically" -}}
     {{- $PhotoswipeURL = "https://cdn.statically.io/gh/dimsemenov/photoswipe/v4.1.3/dist" -}}
+{{- else if eq .Site.Params.CDN.Libraries.Provider "unpkg" -}}
+    {{- $PhotoswipeURL = "https://unpkg.com/photoswipe@4.1.3/dist" -}}
+{{- else if eq .Site.Params.CDN.Libraries.Provider "cdnjs" -}}
+    {{- $PhotoswipeURL = "https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/dist" -}}
 {{- else -}}
     {{- $PhotoswipeURL = "https://cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist" -}}
 {{- end -}}
@@ -75,5 +79,5 @@
 <script src="{{ $PhotoswipeURL }}/photoswipe.min.js"></script>
 <script src="{{ $PhotoswipeURL }}/photoswipe-ui-default.min.js"></script>
 
-<link rel="stylesheet" href="{{ $PhotoswipeURL }}/default-skin/default-skin.css">
-<link rel="stylesheet" href="{{ $PhotoswipeURL }}/photoswipe.css">
+<link rel="stylesheet" href="{{ $PhotoswipeURL }}/default-skin/default-skin.min.css">
+<link rel="stylesheet" href="{{ $PhotoswipeURL }}/photoswipe.min.css">
