--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,8 +1,5 @@
-{{- if and (or (.Site.Params.StaticallyCDN) (eq .Site.Params.CDN.Provider "statically")) (ne hugo.Environment "development") -}}
 <link rel="preconnect" href="//cdn.statically.io" crossorigin>
 <link rel="dns-prefetch" href="//cdn.statically.io">
-{{- end -}}
-
 <link rel="preconnect" href="//cdn.jsdelivr.net" crossorigin>
 <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
 
@@ -20,21 +17,13 @@ details.info {
 }
 </style>
 {{- $Permalink := "" -}}
-{{- if ne hugo.Environment "development" -}}
-    {{- if and (eq .Site.Params.CDN.Provider "statically") (.Site.Params.Repo) -}}
-        {{- $Permalink = printf "https://cdn.statically.io/gh/%s/%s/%s/static" .Site.Params.Repo.Username .Site.Params.Repo.Name .Site.Params.Repo.AbbreviatedCommit -}}
-    {{- else if and (eq .Site.Params.CDN.Provider "jsdelivr") (.Site.Params.Repo) -}}
-        {{- $Permalink = printf "https://cdn.jsdelivr.net/gh/%s/%s@%s/static" .Site.Params.Repo.Username .Site.Params.Repo.Name .Site.Params.Repo.Commit -}}
-    {{- else -}}
-        {{- $Permalink = "" -}}
-    {{- end -}}
-{{- else -}}
-    {{- $Permalink = "" -}}
+{{- if and (.Site.Params.CDN.Fonts.URL) (ne hugo.Environment "development") -}}
+    {{- $Permalink = .Site.Params.CDN.Fonts.URL -}}
 {{- end -}}
 <script>
     (function () {
         const customFont = document.createElement('link');
-        customFont.href = "{{ $Permalink }}/fonts/Lato/font.min.css";
+        customFont.href = "{{ $Permalink }}/Lato/font.min.css";
         customFont.type = "text/css";
         customFont.rel = "stylesheet";
     
