--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -16,8 +16,9 @@
                     {{ if $avatar }}
                         {{ $avatarResized := $avatar.Resize "300x" }}
                         {{- $avatarPermalink := "" -}}
+                        
                         {{- if and ($.Site.Params.CDN.Images.URL) (ne hugo.Environment "development") -}}
-                            {{- $avatarPermalink = printf "%s%s" .Site.Params.CDN.Images.URL $avatarResized.RelPermalink -}}
+                            {{- $avatarPermalink = printf "%s%s" $.Site.Params.CDN.Images.URL $avatarResized.RelPermalink -}}
                         {{- else -}}
                             {{- $avatarPermalink = $avatarResized.RelPermalink -}}
                         {{- end -}}
