Made some changes
Add:
- "Ketentuan dan Kebijakan Blog" Page
- CDN URL for Internal JS and CSS Files
- Scale Icon

Changes:
- Fonts Permalink if CDN not used or if Hugo starts in Development Mode
- "Tentang Saya" Page

--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -16,7 +16,7 @@ details.info {
     border: 1px solid;
 }
 </style>
-{{- $Permalink := "" -}}
+{{- $Permalink := "/fonts" -}}
 {{- if and (.Site.Params.CDN.Fonts.URL) (ne hugo.Environment "development") -}}
     {{- $Permalink = .Site.Params.CDN.Fonts.URL -}}
 {{- end -}}
