--- a/layouts/partials/footer/components/script.html
+++ b/layouts/partials/footer/components/script.html
@@ -7,7 +7,17 @@
 <script src="{{ $VibrantURL }}/vibrant.min.js"
     integrity="sha256-5NovOZc4iwiAWTYIFiIM7DxKUXKWvpVEuMEPLzcm5/g=" crossorigin="anonymous"></script>
 
-{{- $opts := dict "minify" hugo.IsProduction -}}
-{{- $script := resources.Get "ts/main.ts" | js.Build $opts -}}
+{{- $Permalink := "" -}}
+{{- $script := "" -}}
+{{- if ne hugo.IsProduction false -}}
+    {{- $script = resources.Get "ts/main.ts" | js.Build | fingerprint | minify -}}
+    {{- $Permalink = $script.RelPermalink -}}
+    {{- if .Site.Params.CDN.JS.URL -}}
+        {{- $Permalink = printf "%s%s" $.Site.Params.CDN.JS.URL $script.RelPermalink -}}
+    {{- end -}}
+{{- else -}}
+    {{- $script = resources.Get "ts/main.ts" | js.Build -}}
+    {{- $Permalink = $script.RelPermalink -}}
+{{- end -}}
 
-<script type="text/javascript" src="{{ $script.RelPermalink }}" defer></script>
+<script type="text/javascript" src="{{ $Permalink }}" defer></script>
