feat: Made some changes due Theme Update to v2.1.0
Changes:
- Custom CDN for Libraries are removed
- Custom Photoswipe Layout are removed and will depending on Theme
- Adding Custom 'data/external.yaml' for Specify URL for External Libraries
- Theme Update to v2.1.0 (based on CaiJimmy/hugo-theme-stack@8b66227)

--- a/layouts/partials/footer/components/script.html
+++ b/layouts/partials/footer/components/script.html
@@ -1,11 +1,4 @@
-{{- $VibrantURL := "" -}}
-{{- if eq .Site.Params.CDN.Libraries.Provider "unpkg" -}}
-    {{- $VibrantURL = "https://unpkg.com/node-vibrant@3.1.5/dist" -}}
-{{- else -}}
-    {{- $VibrantURL = "https://cdn.jsdelivr.net/npm/node-vibrant@3.1.5/dist" -}}
-{{- end -}}
-<script src="{{ $VibrantURL }}/vibrant.min.js"
-    integrity="sha256-5NovOZc4iwiAWTYIFiIM7DxKUXKWvpVEuMEPLzcm5/g=" crossorigin="anonymous"></script>
+{{- partial "helper/external" (dict "Context" . "Namespace" "Vibrant") -}}
 
 {{- $Permalink := "" -}}
 {{- $script := "" -}}
