--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,8 +1,17 @@
-<link rel="preconnect" href="//cdn.statically.io" crossorigin>
-<link rel="dns-prefetch" href="//cdn.statically.io">
-<link rel="preconnect" href="//cdn.jsdelivr.net" crossorigin>
-<link rel="dns-prefetch" href="//cdn.jsdelivr.net">
-
+<link rel="preconnect" href="https://cdn.statically.io" crossorigin>
+<link rel="dns-prefetch" href="https://cdn.statically.io">
+<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+<link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+{{ if eq .Site.Params.Twemoji.enabled true }}
+    {{- partial "helper/external" (dict "Context" . "Namespace" "Twemoji") -}}
+<script>
+    window.onload = function() {
+        twemoji.parse(document.body, 
+            {folder: 'svg', ext: '.svg', base: 'https://cdn.jsdelivr.net/gh/twitter/twemoji@13.0.1/assets/'}
+        );
+    }
+</script>
+{{ end }}
 <style>
 :root {
     --base-font-family: "Lato", var(--sys-font-family), var(--zh-font-family), sans-serif;
@@ -15,7 +24,21 @@ details.info {
     padding: 0 var(--card-padding);
     border: 1px solid;
 }
+
+{{ if eq .Site.Params.Twemoji.enabled true }}
+img.emoji {
+    width:16px;
+    margin: 0 .05em 0 .1em;
+    vertical-align: -0.1em;
+    pointer-events: none; 
+}
+{{ else }}
+img.emoji {
+    font-family: Apple Color Emoji,Segoe UI Emoji,NotoColorEmoji,Segoe UI Symbol,Android Emoji,EmojiSymbols;
+}
+{{ end }}
 </style>
+
 {{- $Permalink := "/fonts" -}}
 {{- if and (.Site.Params.CDN.Fonts.URL) (ne hugo.Environment "development") -}}
     {{- $Permalink = .Site.Params.CDN.Fonts.URL -}}
