--- a/layouts/partials/footer/components/script.html
+++ b/layouts/partials/footer/components/script.html
@@ -3,14 +3,14 @@
 {{- $Permalink := "" -}}
 {{- $script := "" -}}
 {{- if ne hugo.IsProduction false -}}
-    {{- $script = resources.Get "ts/main.ts" | js.Build | fingerprint | minify -}}
+    {{- $script = resources.Get "ts/main.ts" | js.Build | minify | fingerprint "sha384" -}}
     {{- $Permalink = $script.RelPermalink -}}
     {{- if .Site.Params.CDN.JS.URL -}}
         {{- $Permalink = printf "%s%s" $.Site.Params.CDN.JS.URL $script.RelPermalink -}}
     {{- end -}}
 {{- else -}}
-    {{- $script = resources.Get "ts/main.ts" | js.Build -}}
+    {{- $script = resources.Get "ts/main.ts" | js.Build | minify | fingerprint "sha384" -}}
     {{- $Permalink = $script.RelPermalink -}}
 {{- end -}}
 
-<script type="text/javascript" src="{{ $Permalink }}" defer></script>
+<script type="text/javascript" src="{{ $Permalink }}" integrity="{{ $script.Data.Integrity }}" defer></script>
