chore: Trying to Optimize Twemoji
Plus:
- Changes some `README.md`
- Implement Base URL, Path and File Extension Configuration for Twemoji
- Trying to add Emoji Support Callback if not using Twemoji
- Remove `crossorigin="anonymous"` when not using any External CDN or the Hugo Started in Development Environment
- Ignore some files for GitHub Actions CI/CD
- Fix Indent Spaces in `data/external.yaml` and `config.yaml`

--- a/layouts/partials/footer/components/script.html
+++ b/layouts/partials/footer/components/script.html
@@ -13,4 +13,4 @@
     {{- $Permalink = $script.RelPermalink -}}
 {{- end -}}
 
-<script type="text/javascript" src="{{ $Permalink }}" integrity="{{ $script.Data.Integrity }}" crossorigin="anonymous" defer></script>
+<script type="text/javascript" src="{{ $Permalink }}" integrity="{{ $script.Data.Integrity }}" {{ if and (.Site.Params.CDN.JS.URL) (eq hugo.IsProduction true) }}crossorigin="anonymous"{{ end }} defer></script>
