--- a/static/fonts/Lato/font.css
+++ b/static/fonts/Lato/font.css
@@ -3,6 +3,7 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 300;
+    font-display: swap;
     src: url('lato-v17-latin-ext_latin-300.eot'); /* IE9 Compat Modes */
     src: local(''),
          url('lato-v17-latin-ext_latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -16,6 +17,7 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: url('lato-v17-latin-ext_latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
          url('lato-v17-latin-ext_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -29,6 +31,7 @@
     font-family: 'Lato';
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src: url('lato-v17-latin-ext_latin-700.eot'); /* IE9 Compat Modes */
     src: local(''),
          url('lato-v17-latin-ext_latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
