Fixing Preview Blog Styles
Plus:
- Hugo Theme Update to CaiJimmy/hugo-theme-stack@3e8490d
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/96db925...3e8490d
- Made some changes due Theme Update`

--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -4,4 +4,4 @@
 {{ if and (.Site.Params.CDN.CSS.URL) (eq hugo.IsProduction true) }}
     {{ $Permalink = printf "%s%s" $.Site.Params.CDN.CSS.URL $style.RelPermalink }}
 {{ end }}
-<link rel="stylesheet" href="{{ $Permalink }}" integrity="{{ $style.Data.Integrity }}" {{ if and (.Site.Params.CDN.CSS.URL) (eq hugo.IsProduction true) }}crossorigin="anonymous"{{ end }}>
+<link rel="stylesheet" href="{{ $Permalink }}" integrity="{{ $style.Data.Integrity }}" crossorigin="anonymous">
