--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -6,7 +6,7 @@
 <link rel="dns-prefetch" href="https://cdn.statically.io">
 <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
-<link rel="stylesheet" href="{{ $PermalinkFonts }}/Lato/font.min.css" type="text/css" crossorigin="anonymous" disabled>
+<link rel="stylesheet" href="{{ $PermalinkFonts }}/Lato/font.min.css" type="text/css" crossorigin="anonymous">
 <link rel="preload" href="{{ $PermalinkFonts }}/Lato/lato-v17-latin-ext_latin-regular.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="{{ $PermalinkFonts }}/Lato/lato-v17-latin-ext_latin-700.woff2" as="font" type="font/woff2" crossorigin>
 
