article(update): Migrasi Blog ke Hugo
Plus:
- Fix Spoiler "Border" (Outline) feature bug
- Fix "Hubungi Saya" link in "Cara Install Git" article
- Fix Summary typo in "Halo Dunia! (Lagi)" article

--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -18,9 +18,14 @@
 }
 
 details.info {
-    display: block;
-    padding: 0 var(--card-padding);
+    padding: 0.75em;
     border: 1px solid;
+}
+
+details summary {
+    display: block;
+    outline: none;
+    cursor: pointer;
 }
 
 {{ if eq .Site.Params.Twemoji.enabled true }}
