feat: Make Emoji Size according to text size

--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -30,8 +30,8 @@ details summary {
 
 {{ if eq .Site.Params.Twemoji.enabled true }}
 img.emoji {
-    width: 16px;
-    height: 16px;
+    width: 1em;
+    height: 1em;
     margin: 0 .05em 0 .1em;
     vertical-align: -0.1em;
     pointer-events: none; 
